fixed butler